minor changes prototype 3

--- a/Prototype - 3/nosotros.html
+++ b/Prototype - 3/nosotros.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica y responsive -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - DroneAgro</title>
@@ -8,6 +9,10 @@
 </head>
 <body>
 
+    <!-- ==========================================
+         PÁGINA NOSOTROS - Sobre la empresa
+         Cuenta la historia, misión, visión, valores y equipo
+         ========================================== -->
     <!-- HEADER -->
     <header>
         <nav>
@@ -35,7 +40,11 @@
         <p class="fade-in-up delay-1">Innovación y compromiso con la agricultura</p>
     </section>
 
-    <!-- HISTORIA -->
+    <!-- ==========================================
+         HISTORIA - Origen de la empresa
+         Cuenta cómo empezó DroneAgro y su evolución
+         Layout de dos columnas: texto + imagen
+         ========================================== -->
     <section id="historia">
         <div class="historia-container">
             <div class="historia-content animate-on-scroll from-left">
@@ -266,13 +275,13 @@
     <footer>
         <div class="footer-container">
             <div class="footer-col">
-                <h4>🚁 DroneAgro</h4>
+                <h4>DroneAgro</h4>
                 <p>Tecnología de precisión para la agricultura del futuro.</p>
             </div>
             <div class="footer-col">
                 <h4>Enlaces</h4>
                 <ul>
-                    <li><a href="index. html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="testimonios.html">Testimonios</a></li>
@@ -289,13 +298,13 @@
             </div>
             <div class="footer-col">
                 <h4>Contacto</h4>
-                <p>📍 Av. Agricultura 1234</p>
-                <p>📞 +1 234 567 890</p>
-                <p>✉️ info@droneagro. com</p>
+                <p>Av. Agricultura 1234</p>
+                <p>+1 234 567 890</p>
+                <p>info@droneagro.com</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 DroneAgro.  Todos los derechos reservados.</p>
+            <p>&copy; 2025 DroneAgro. Todos los derechos reservados.</p>
         </div>
     </footer>
 
