--- a/Prototype - 3/testimonios.html
+++ b/Prototype - 3/testimonios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica y responsive -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonios - DroneAgro</title>
@@ -8,6 +9,11 @@
 </head>
 <body>
 
+    <!-- ==========================================
+         PÁGINA TESTIMONIOS
+         Muestra reseñas de clientes y casos de éxito
+         Incluye estadísticas de satisfacción
+         ========================================== -->
     <!-- HEADER -->
     <header>
         <nav>
@@ -35,7 +41,11 @@
         <p class="fade-in-up delay-1">Lo que dicen nuestros clientes sobre nosotros</p>
     </section>
 
-    <!-- ESTADÍSTICAS DE SATISFACCIÓN -->
+    <!-- ==========================================
+         ESTADÍSTICAS DE SATISFACCIÓN
+         Números clave sobre la satisfacción del cliente
+         Los porcentajes se animan automáticamente
+         ========================================== -->
     <section id="satisfaccion">
         <div class="satisfaccion-grid">
             <div class="satisfaccion-item animate-on-scroll scale-in">
@@ -44,7 +54,7 @@
             </div>
             <div class="satisfaccion-item animate-on-scroll scale-in">
                 <span class="satisfaccion-numero">4.9</span>
-                <span class="satisfaccion-label">Calificación Promedio ⭐</span>
+                <span class="satisfaccion-label">Calificación Promedio ★</span>
             </div>
             <div class="satisfaccion-item animate-on-scroll scale-in">
                 <span class="satisfaccion-numero">85%</span>
@@ -65,7 +75,7 @@
                     <div>
                         <h4>Carlos Méndez</h4>
                         <span>Productor de Soja - 2,000 ha</span>
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="stars">★★★★★</div>
                     </div>
                 </div>
                 <blockquote>
@@ -86,7 +96,7 @@
                     <div>
                         <h4>Ing. María González</h4>
                         <span>Consultora Agronómica</span>
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="stars">★★★★★</div>
                     </div>
                 </div>
                 <blockquote>
@@ -108,7 +118,7 @@
         
         <div class="testimonios-grid">
             <div class="testimonio-simple animate-on-scroll from-left">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"Excelente servicio.  Puntuales, profesionales y con resultados visibles desde el primer vuelo."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/men/67.jpg" alt="">
@@ -120,7 +130,7 @@
             </div>
 
             <div class="testimonio-simple animate-on-scroll from-bottom">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"El monitoreo con drones nos permitió detectar una plaga temprano y salvar el 30% de la cosecha."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="">
@@ -132,7 +142,7 @@
             </div>
 
             <div class="testimonio-simple animate-on-scroll from-right">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"Increíble la precisión del mapeo. Pudimos ver exactamente dónde había problemas de riego."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/women/55.jpg" alt="">
@@ -144,7 +154,7 @@
             </div>
 
             <div class="testimonio-simple animate-on-scroll from-left">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"La capacitación fue excelente.  Ahora operamos nuestros propios drones con total confianza."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="">
@@ -156,7 +166,7 @@
             </div>
 
             <div class="testimonio-simple animate-on-scroll from-bottom">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"Redujimos el uso de agua un 85%.  Esto es sustentabilidad real, no solo palabras."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="">
@@ -168,7 +178,7 @@
             </div>
 
             <div class="testimonio-simple animate-on-scroll from-right">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars">★★★★★</div>
                 <p>"El equipo de DroneAgro siempre está disponible. Su soporte post-servicio es excepcional."</p>
                 <div class="autor">
                     <img src="https://randomuser.me/api/portraits/men/88.jpg" alt="">
@@ -258,20 +268,14 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>DroneAgro</h3>
-                <p>Tecnología de punta para el campo del futuro.</p>
-                <div class="social-links">
-                    <a href="#" aria-label="Facebook"></a>
-                    <a href="#" aria-label="Instagram"></a>
-                    <a href="#" aria-label="Twitter"></a>
-                    <a href="#" aria-label="LinkedIn"></a>
-                </div>
+        <div class="footer-container">
+            <div class="footer-col">
+                <h4>DroneAgro</h4>
+                <p>Tecnología de precisión para la agricultura del futuro.</p>
             </div>
 
-            <div class="footer-section">
-                <h4>Enlaces Rápidos</h4>
+            <div class="footer-col">
+                <h4>Enlaces</h4>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
@@ -280,16 +284,26 @@
                 </ul>
             </div>
 
-            <div class="footer-section">
+            <div class="footer-col">
+                <h4>Servicios</h4>
+                <ul>
+                    <li><a href="servicios.html">Fumigación</a></li>
+                    <li><a href="servicios.html">Fertilización</a></li>
+                    <li><a href="servicios.html">Mapeo</a></li>
+                    <li><a href="servicios.html">Capacitación</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
                 <h4>Contacto</h4>
-                <p> Ciudad, País</p>
-                <p> +123 456 7890</p>
-                <p> info@droneagro.com</p>
+                <p>Av. Agricultura 1234</p>
+                <p>+1 234 567 890</p>
+                <p>info@droneagro.com</p>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 DroneAgro. Todos los derechos reservados.</p>
+            <p>&copy; 2025 DroneAgro. Todos los derechos reservados.</p>
         </div>
     </footer>
 
