--- a/Prototype - 3/index.html
+++ b/Prototype - 3/index.html
@@ -36,6 +36,14 @@
                 <span></span>
                 <span></span>
             </div>
+        </nav>
+    </header>
+
+    <!-- ==========================================
+         HERO - Sección principal con video de fondo
+         Primera sección que ve el usuario
+         ========================================== -->
+    <section id="hero">
         <!-- Video de fondo en loop continuo -->
         <video autoplay muted loop playsinline class="hero-video">
             <source src="https://assets.mixkit.co/videos/preview/mixkit-aerial-view-of-a-farm-field-4065-large.mp4" type="video/mp4">
@@ -75,16 +83,7 @@
          ESTADÍSTICAS - Números impactantes
          Muestra métricas clave de la empresa con
          animación de conteo automático
-         ==========================================ef="servicios.html" class="cta-button secondary">Ver Servicios</a>
-            </div>
-        </div>
-        
-        <div class="scroll-indicator">
-            <span>↓</span>
-        </div>
-    </section>
-
-    <!-- ESTADÍSTICAS -->
+         ========================================== -->
     <section id="stats">
         <div class="stats-container">
             <div class="stat-item animate-on-scroll">
