--- a/Prototype - 3/servicios.html
+++ b/Prototype - 3/servicios.html
@@ -308,17 +308,17 @@
                     <span class="precio-unidad">/ curso</span>
                 </div>
                 <a href="index.html#contacto" class="cta-button primary">Solicitar Información</a>
-         ==========================================
-         TABLA COMPARATIVA
-         Muestra ventajas de usar drones vs métodos tradicionales
-         La clase ".ventaja" resalta las celdas en verde
-         ==========================================
+            </div>
         </div>
     </section>
 
-    <!-- TABLA COMPARATIVA -->
+    <!-- ==========================================
+         TABLA COMPARATIVA
+         Muestra ventajas de usar drones vs métodos tradicionales
+         La clase ".ventaja" resalta las celdas en verde
+         ========================================== -->
     <section id="comparativa">
-        <h2 class="animate-on-scroll">Comparativa:  Drones vs Métodos Tradicionales</h2>
+        <h2 class="animate-on-scroll">Comparativa: Drones vs Métodos Tradicionales</h2>
         <div class="tabla-wrapper animate-on-scroll">
             <table class="tabla-comparativa">
                 <thead>
@@ -356,7 +356,15 @@
                     </tr>
                     <tr>
                         <td>Operación nocturna</td>
-         ==========================================
+                        <td class="ventaja">Sí</td>
+                        <td>No</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <!-- ==========================================
          CTA FINAL - Llamada a la acción
          Sección final para convertir visitantes en clientes
          ========================================== -->
@@ -368,15 +376,10 @@
         </div>
     </section>
 
-    <!-- FOOTER (igual en todas las páginas)="cta-servicios">
-        <div class="cta-servicios-content animate-on-scroll">
-            <h2>¿Listo para modernizar tu operación agrícola?</h2>
-            <p>Contáctanos hoy y recibe una cotización personalizada sin compromiso</p>
-            <a href="index.html#contacto" class="cta-button primary large">Solicitar Cotización Gratuita</a>
-        </div>
-    </section>
-
-    <!-- FOOTER -->
+    <!-- ==========================================
+         FOOTER
+         Igual en todas las páginas
+         ========================================== -->
     <footer>
         <div class="footer-container">
             <div class="footer-col">
